// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload renders normally with multiple files props 1`] = `
<div
  class="root"
>
  <div
    class="inputWrapper"
  >
    <ul
      class="list standard noBullets"
    >
      <li
        class="fileListItem"
      >
        <span
          class="text brand span fileName"
        >
          test.jpg (10 kB)
        </span>
        <button
          class="delete"
          type="button"
        >
          <div
            class="icon--old critical medium"
          >
            <svg
              class="icon s"
              height="100%"
              viewBox="0 0 480 480"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M374.8 167.6l-30.4-30.4-88.4 88.4-88.4-88.4-30.4 30.4 88.4 88.4-88.4 88.4 30.4 30.4 88.4-88.4 88.4 88.4 30.4-30.4-88.4-88.4z"
              />
            </svg>
          </div>
        </button>
      </li>
    </ul>
    <div
      class="row"
    >
      <div
        class="field"
      >
        <input
          class="input"
          id="multiple"
          multiple=""
          type="file"
        />
        <button
          class="Button-module_button__3wgee button_hds-button__2A0je Button-module_secondary__399Vd button_hds-button--secondary__1NOWS Button-module_theme-coat__2xA5D button_hds-button--theme-coat__12cO0 Button-module_size-small__2u97E button_hds-button--small__2NFef"
          type="button"
        >
          <span
            class="Button-module_label__2zMLC button_hds-button__label__2EQa-"
          >
            Lisää...
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUpload renders normally with single file props 1`] = `
<div
  class="root"
>
  <div
    class="inputWrapper"
  >
    <ul
      class="list standard noBullets"
    >
      <li
        class="fileListItem"
      >
        <span
          class="text brand span fileName"
        >
          test.jpg (10 kB)
        </span>
        <button
          class="delete"
          type="button"
        >
          <div
            class="icon--old critical medium"
          >
            <svg
              class="icon s"
              height="100%"
              viewBox="0 0 480 480"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M374.8 167.6l-30.4-30.4-88.4 88.4-88.4-88.4-30.4 30.4 88.4 88.4-88.4 88.4 30.4 30.4 88.4-88.4 88.4 88.4 30.4-30.4-88.4-88.4z"
              />
            </svg>
          </div>
        </button>
      </li>
    </ul>
    <div
      class="row"
    >
      <div
        class="field"
      >
        <input
          class="input"
          id="single"
          type="file"
        />
        <button
          class="Button-module_button__3wgee button_hds-button__2A0je Button-module_secondary__399Vd button_hds-button--secondary__1NOWS Button-module_theme-coat__2xA5D button_hds-button--theme-coat__12cO0 Button-module_size-small__2u97E button_hds-button--small__2NFef"
          type="button"
        >
          <span
            class="Button-module_label__2zMLC button_hds-button__label__2EQa-"
          >
            Valitse...
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
